# simple-blockchain

./: .gitignore  CMakeLists.txt  README.md  cli.cpp  main.cpp
src/: Block.cpp  Block.h  CMakeLists.txt  Cli.cpp  Cli.h  Hash.cpp  Hash.h  Manager.cpp  Manager.h  Transaction.cpp  Transaction.h  User.cpp  User.h
src/Pools/: BlocksPool.cpp  BlocksPool.h  TransactionsPool.cpp  TransactionsPool.h  UsersPool.cpp  UsersPool.h
src/Utils/: Application.cpp  Application.h  Color.cpp  Color.h  Logger.cpp  Logger.h  MerkleTree.cpp  MerkleTree.h  NumberGenerator.cpp  NumberGenerator.h  StringGenerator.cpp  StringGenerator.h
